--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -20,7 +20,7 @@
 
 <%= simple_form_for [ @restaurant, @review ] do |form| %>
       <%= form.input :content %>
-      <%= form.input :rating %>
+      <%= form.input :rating, collection: 0..5, as: :radio_buttons %>
       <%= form.submit %>
 <% end %>
 <%= link_to 'Back', restaurants_path %>
